[package]
name = "order-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
rmp-serde = "1.1.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
slab = "0.4.9"
tokio = { version = "1.36.0", features = ["full"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "serde",
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
rand = "0.8.5"
